# ToDoList

./: .done  .todo_app.cc.swp  CMakeCache.txt  CMakeLists.txt  Main.qml  README.md  REUSE.toml  ToDoList.qmlproject  build.ninja  cmake_install.cmake  main.cc  qmlmodules.cmake  qt_attribution.json  qtcsettings.cmake  todo  todo.cc  todo.txt  todo_app.cc  todo_app.h
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  ToDoListApp-plugins.cmake  ToDoListApp_qml.cmake  ToDoListApp_res.cmake  deploy_qml_app_ToDoListApp_86f3ecdf52.cmake
.qt/deploy_qml_imports/: ToDoListApp.cmake
.qt/qml_imports/: ToDoListApp_build.rsp  ToDoListApp_conf.cmake  ToDoListApp_conf.rsp
.qt/rcc/: ToDoListApp_raw_qml_0.qrc  configuration.qrc  qmake_Main.qrc
.rcc/qmlcache/: ToDoListApp_qml_loader_file_list.rsp  all_aotstats.aotstatslist  module_ToDoListApp.aotstatslist
.rcc/qmllint/: ToDoListApp.rsp  ToDoListApp_json.rsp  ToDoListApp_module.rsp
Main/: ToDoListApp_qml_module_dir_map.qrc
content/: CMakeLists.txt  CalendarView.qml  ClockView.qml  ClockViewForm.ui.qml  FontSizeSettingsForm.ui.qml  HomePageForm.ui.qml  MaxTasksSettingsForm.ui.qml  OtherSettings.qml  OtherSettingsForm.ui.qml  QuickTaskFieldForm.ui.qml  TasksList.qml  TasksListForm.ui.qml  cmake_install.cmake  todolist_content_qml_module_dir_map.qrc  todolist_contentplugin_contentPlugin_in.cpp
content/.qt/: todolist_content_qml.cmake  todolist_content_res.cmake
imports/: CMakeLists.txt  cmake_install.cmake
qmltypes/: ToDoListApp_foreign_types.txt
src/: app_environment.h  import_qml_plugins.h  main.cpp
(+159 files in other folders)
